mvpdemo2 mvp+retrofit+RxJava

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':recycletest', ':mvpdemo', ':volleytest', ':rrimageview'
+include ':recycletest', ':mvpdemo', ':volleytest', ':rrimageview', ':mvpdemo2'
